--- a/bonus/confs/app/service.yaml
+++ b/bonus/confs/app/service.yaml
@@ -4,8 +4,10 @@ metadata:
   name: playground
   namespace: dev
 spec:
+  type: NodePort
   selector:
     app: playground
   ports:
     - port: 8888
       targetPort: 8888
+      nodePort: 30083
