--- a/bonus/confs/argocd/application.yaml
+++ b/bonus/confs/argocd/application.yaml
@@ -1,12 +1,12 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: iot
+  name: iot-app
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL: "http://gitlab-webservice-default.gitlab.svc.cluster.local:8181/root/iot-zlafou.git"
+    repoURL: "http://gitlab-webservice-default.gitlab.svc.cluster.local:8181/root/iot-app.git"
     targetRevision: main
     path: ./app
   destination:
